# dbfs2

./: .gitignore  Cargo.toml  Makefile  README.md  README_CN.md  test.dbfs
bench/: .gitignore  Makefile  Pipfile  filebench.py  fiotest.py  mdtest-sig.py  mdtest.py
bench/filebench/: fileserver.f  varmail.f  webserver.f
bench/result/mdtest/: dbfs.txt  jfs.txt
doc/: fuse.md  复现遇到的问题.md  设计文档.md
examples/: dbfs2.rs  fuse.rs  hugewrite.rs  link.rs  operate.rs  rwt.rs  serde.rs  test.rs
src/: attr.rs  common.rs  dir.rs  extend.rs  file.rs  fs_type.rs  inode.rs  lib.rs  link.rs
src/fuse/: attr.rs  file.rs  inode.rs  link.rs  mkfs.rs  mod.rs  sblk.rs
