[package]
name = "dbfs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvfs = {path = "../rvfs"}
jammdb = {path = "../jammdb"}
spin = "0.9.2"

dbop = {path = "../dbop"}
preprint = "0.1.0"

[dev-dependencies]
env_logger = "0.9.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = {version = "1.0.136",default-features = false,features = ["derive","alloc"]}