[package]
name = "dbfs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvfs = {path = "../rvfs"}
jammdb = {git="https://github.com/Godones/jammdb"}
spin = "0.9.2"
bitflags = "2.1.0"
dbop = {path = "../dbop"}
preprint = "0.1.0"

fuser = {version = "0.7.0", optional = true}
libc = {version = "0.2.51",optional = true}
core2 = {version = "0.4.0",default-features = false,optional = true}
memmap2 = {version = "0.5.10",optional = true}
downcast = {version = "0.11.0",optional = true}
log = "0.4.17"

[features]
default = ["rvfs"]
rvfs = []
fuse = ["fuser","libc","core2","memmap2","downcast"]

[dev-dependencies]
env_logger = "0.9.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = {version = "1.0.136",default-features = false,features = ["derive","alloc"]}
dbfs2 = {path = ".",features = ["fuse","rvfs"]}
clap = { version = "3.0", features = ["cargo"] }